@@ -1,8 +1,5 @@
 package yu.cse.odiga.global.S3;
 
-import com.amazonaws.services.s3.AmazonS3;
-import com.amazonaws.services.s3.model.CannedAccessControlList;
-import com.amazonaws.services.s3.model.PutObjectRequest;
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
@@ -10,13 +7,20 @@ import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.UUID;
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
+
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
+
+import com.amazonaws.services.s3.AmazonS3;
+import com.amazonaws.services.s3.model.CannedAccessControlList;
+import com.amazonaws.services.s3.model.PutObjectRequest;
+
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 
 @Transactional
 @Slf4j
@@ -24,54 +28,52 @@ import org.springframework.web.multipart.MultipartFile;
 @RequiredArgsConstructor
 public class S3Util {
 
-    private final AmazonS3 amazonS3;
+	private final AmazonS3 amazonS3;
 
-    @Value("${cloud.aws.s3.bucket}")
-    private String bucket;
+	@Value("${cloud.aws.s3.bucket}")
+	private String bucket;
 
-    public File convert(MultipartFile file) throws IOException {
-        String originalFileName = file.getOriginalFilename();
-        String uuid = UUID.randomUUID().toString();
-        String uniqueFileName = uuid + "_" + originalFileName.replaceAll("\\s", "_");
+	public File convert(MultipartFile file) throws IOException {
+		String originalFileName = file.getOriginalFilename();
+		String uuid = UUID.randomUUID().toString();
+		String uniqueFileName = uuid + "_" + originalFileName.replaceAll("\\s", "_");
 
-        File convertFile = new File(uniqueFileName);
-        if (convertFile.createNewFile()) {
-            try (FileOutputStream fos = new FileOutputStream(convertFile)) {
-                fos.write(file.getBytes());
-            } catch (IOException e) {
-                log.error("파일 변환 중 오류 발생: {}", e.getMessage());
-                throw e;
-            }
-            return convertFile;
-        }
-        throw new IllegalArgumentException(String.format("파일 변환에 실패했습니다. %s", originalFileName));
-    }
+		File convertFile = new File(uniqueFileName);
+		if (convertFile.createNewFile()) {
+			try (FileOutputStream fos = new FileOutputStream(convertFile)) {
+				fos.write(file.getBytes());
+			} catch (IOException e) {
+				log.error("파일 변환 중 오류 발생: {}", e.getMessage());
+				throw e;
+			}
+			return convertFile;
+		}
+		throw new IllegalArgumentException(String.format("파일 변환에 실패했습니다. %s", originalFileName));
+	}
 
-    public String putS3(File uploadFile, String fileName) {
-        amazonS3.putObject(new PutObjectRequest(bucket, fileName, uploadFile)
-                .withCannedAcl(CannedAccessControlList.PublicRead));
-        return amazonS3.getUrl(bucket, fileName).toString();
-    }
+	public String putS3(File uploadFile, String fileName) {
+		amazonS3.putObject(new PutObjectRequest(bucket, fileName, uploadFile)
+			.withCannedAcl(CannedAccessControlList.PublicRead));
+		return amazonS3.getUrl(bucket, fileName).toString();
+	}
 
-    public void removeNewFile(File targetFile) {
-        if (targetFile.delete()) {
-            log.info("파일이 삭제되었습니다.");
-        } else {
-            log.info("파일이 삭제되지 못했습니다.");
-        }
-    }
+	public void removeNewFile(File targetFile) {
+		if (targetFile.delete()) {
+			log.info("파일이 삭제되었습니다.");
+		} else {
+			log.info("파일이 삭제되지 못했습니다.");
+		}
+	}
 
-    public void deleteFile(String fileUrl) {
-        try {
-            URL url = new URL(fileUrl);
-            String objectKey = url.getPath().substring(1);
-            String decodedObjectKey = URLDecoder.decode(objectKey, "UTF-8");
-            log.info("삭제할 파일 경로: " + decodedObjectKey);
-            amazonS3.deleteObject(bucket, decodedObjectKey);
-        } catch (MalformedURLException e) {
-            log.error("잘못된 url: {}", e.getMessage());
-        } catch (UnsupportedEncodingException e) {
-            log.error("디코딩 중 오류 발생: {}", e.getMessage());
-        }
-    }
+	public void deleteFile(String fileUrl) {
+		try {
+			URL url = new URL(fileUrl);
+			String objectKey = url.getPath().substring(1);
+			String decodedObjectKey = URLDecoder.decode(objectKey, StandardCharsets.UTF_8);
+			log.info("삭제할 파일 경로: " + decodedObjectKey);
+			amazonS3.deleteObject(bucket, decodedObjectKey);
+		} catch (MalformedURLException e) {
+			log.error("잘못된 url: {}", e.getMessage());
+		}
+	}
 }
